Bug 1247889 - Ensure enough ballast space in CodeGenerator::generateBody. r=h4writer